--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@ description: "Some description about Cult"
 
 <img itemprop="image" class="img-rounded about_perfil" src="https://daita.github.io/owl512.png" alt="Artificial Owl">
 
-<h2>My projects</h2>
+<h2>My work</h2>
 
 <div class="aboutme">
 	<ul class="recent">
 		{% for project in site.projects %}
-	    	<li><a href="{{ project.url}}"><h3 class="project-name" itemprop="name">{{ project.name }}</h3></a></li>
+	    	<li><a href="{{ project.url}}"><h3 class="project-name" itemprop="name">{% if project.wip == true%}*{% endif %}{{ project.name }}</h3></a></li>
 	    {% endfor %}
 	</ul>
 </div>
